--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -548,8 +548,8 @@
             <p><strong><strong>Included variable with markdown</strong></strong></p>
             <p><strong>Test included variable as attribute</strong></p>
             <p style="color: blue">Test</p>
-            <p><strong>Test included variable as html element</strong></p>
-            <p><span>Included variable within html element</span></p>
+            <p><strong>Test included variable as HTML element</strong></p>
+            <p><span>Included variable within HTML element</span></p>
             <p><strong>Test included variable overridden by variables.md</strong></p>
             <p>Global Variable Overriding Included Variable</p>
             <p><strong>Test included variables in included file</strong></p>
