--- a/packages/cli/test/functional/test_site_convert/test_basic_convert/expected/about.html
+++ b/packages/cli/test/functional/test_site_convert/test_basic_convert/expected/about.html
@@ -59,7 +59,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <h1 id="about"><span id="about" class="anchor"></span>About<a class="fa fa-anchor" href="#about" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="about">About<a class="fa fa-anchor" href="#about" onclick="event.stopPropagation()"></a></h1>
         <p>Welcome to your <strong>About Us</strong> page.</p>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
