--- a/packages/cli/test/functional/test_site/expected/testLinks.html
+++ b/packages/cli/test/functional/test_site/expected/testLinks.html
@@ -59,7 +59,7 @@
         <div class="site-nav-top">
           <div class="fw-bold mb-2" style="font-size: 1.25rem;">
             <div>
-              <h2 id="default-layout"><span id="default-layout" class="anchor"></span>Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
+              <h2 id="default-layout">Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/test_site/bugs/index.html">Open Bugs 🐛</a></div>
                 </li>
                 <li class="site-nav-custom-list-item site-nav-list-item-0">
-                  <h3 id="testing-site-nav"><span id="testing-site-nav" class="anchor"></span>Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
+                  <h3 id="testing-site-nav">Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
                 </li>
                 <li>
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><strong>Dropdown </strong> <span aria-hidden="true" class="glyphicon glyphicon-search"></span> title ✏️
@@ -208,7 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <h1 id="autolinks"><span id="autolinks" class="anchor"></span>Autolinks<a class="fa fa-anchor" href="#autolinks" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="autolinks">Autolinks<a class="fa fa-anchor" href="#autolinks" onclick="event.stopPropagation()"></a></h1>
         <p>A URL with <code class="line-numbers hljs inline no-lang" v-pre>http(s)://</code> head or an email address in plain text will be auto converted into clickable links.</p>
         <p>This functionality is inherited from markdown-it, with the setting of <code class="line-numbers hljs inline no-lang" v-pre>fuzzyLink</code> turned off.</p>
         <p><strong>These will be converted:</strong></p>
@@ -231,7 +231,7 @@
     </div>
     <div>
       <footer>
-        <h1 id="heading-in-footer-should-not-be-indexed"><span id="heading-in-footer-should-not-be-indexed" class="anchor"></span>Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="heading-in-footer-should-not-be-indexed">Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
         <div class="text-center">
           This is a dynamic height footer that supports markdown <span>😄</span>!
         </div>
