--- a/packages/cli/test/functional/test_site/expected/testPopovers.html
+++ b/packages/cli/test/functional/test_site/expected/testPopovers.html
@@ -59,7 +59,7 @@
         <div class="site-nav-top">
           <div class="fw-bold mb-2" style="font-size: 1.25rem;">
             <div>
-              <h2 id="default-layout"><span id="default-layout" class="anchor"></span>Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
+              <h2 id="default-layout">Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/test_site/bugs/index.html">Open Bugs 🐛</a></div>
                 </li>
                 <li class="site-nav-custom-list-item site-nav-list-item-0">
-                  <h3 id="testing-site-nav"><span id="testing-site-nav" class="anchor"></span>Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
+                  <h3 id="testing-site-nav">Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
                 </li>
                 <li>
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><strong>Dropdown </strong> <span aria-hidden="true" class="glyphicon glyphicon-search"></span> title ✏️
@@ -243,14 +243,14 @@
         <br>
         <p><strong>Popover with src attribute</strong></p>
         <popover><template #content>
-            <h1 id="some-heading"><span id="some-heading" class="anchor"></span>Some heading<a class="fa fa-anchor" href="#some-heading" onclick="event.stopPropagation()"></a></h1>
+            <h1 id="some-heading">Some heading<a class="fa fa-anchor" href="#some-heading" onclick="event.stopPropagation()"></a></h1>
             <p>The <strong>quick</strong> brown fox jumps <em>over</em> the lazy dog.</p>
           </template><template #header>Correct header</template>
           src from a .md file with absolute links
         </popover>
         <br>
         <popover><template #content>
-            <h1 id="some-heading-2"><span id="some-heading-2" class="anchor"></span>Some heading<a class="fa fa-anchor" href="#some-heading-2" onclick="event.stopPropagation()"></a></h1>
+            <h1 id="some-heading-2">Some heading<a class="fa fa-anchor" href="#some-heading-2" onclick="event.stopPropagation()"></a></h1>
             <p>The <strong>quick</strong> brown fox jumps <em>over</em> the lazy dog.</p>
           </template><template #header>Correct header</template>
           src from a .md file with relative links
@@ -278,7 +278,7 @@
         <br>
         <popover><template #content>
             <panel src="/test_site/testPanels/NormalPanelContent._include_.html" expanded panelId="nested-panel"><template #header>
-                <h2 id="nested-panel"><span id="nested-panel" class="anchor"></span>Nested Panel<a class="fa fa-anchor" href="#nested-panel" onclick="event.stopPropagation()"></a></h2>
+                <h2 id="nested-panel">Nested Panel<a class="fa fa-anchor" href="#nested-panel" onclick="event.stopPropagation()"></a></h2>
               </template></panel>
           </template>
           <template #header><span>Reactive content</span></template>
@@ -311,7 +311,7 @@
     </div>
     <div>
       <footer>
-        <h1 id="heading-in-footer-should-not-be-indexed"><span id="heading-in-footer-should-not-be-indexed" class="anchor"></span>Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="heading-in-footer-should-not-be-indexed">Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
         <div class="text-center">
           This is a dynamic height footer that supports markdown <span>😄</span>!
         </div>
