--- a/packages/cli/test/functional/test_site_convert/test_navigation_convert/expected/index.html
+++ b/packages/cli/test/functional/test_site_convert/test_navigation_convert/expected/index.html
@@ -93,7 +93,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <h1 id="readme"><span id="readme" class="anchor"></span>Readme<a class="fa fa-anchor" href="#readme" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="readme">Readme<a class="fa fa-anchor" href="#readme" onclick="event.stopPropagation()"></a></h1>
         <p>Test readme file</p>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
