--- a/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic1.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic1.html
@@ -88,7 +88,7 @@
       <div id="content-wrapper">
 
         <br>
-        <h1 id="topic-1"><span id="topic-1" class="anchor"></span>Topic 1<a class="fa fa-anchor" href="#topic-1" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="topic-1">Topic 1<a class="fa fa-anchor" href="#topic-1" onclick="event.stopPropagation()"></a></h1>
         <blockquote>
           <p>This is a placeholder page - more content to be added.</p>
         </blockquote>
