--- a/packages/cli/test/functional/test_site_templates/test_minimal/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_minimal/expected/index.html
@@ -31,7 +31,7 @@
     <header></header>
     <div id="flex-body">
       <div id="content-wrapper">
-        <h1 id="welcome-to-markbind"><span id="welcome-to-markbind" class="anchor"></span>Welcome to MarkBind<a class="fa fa-anchor" href="#welcome-to-markbind" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="welcome-to-markbind">Welcome to MarkBind<a class="fa fa-anchor" href="#welcome-to-markbind" onclick="event.stopPropagation()"></a></h1>
         <p>This is a minimalistic template. To learn more about authoring contents in MarkBind, visit the <a href="https://markbind.org/userGuide/authoringContents.html">User Guide</a>.</p>
       </div>
       <scroll-top-button></scroll-top-button>
