Add template for 404 page

--- a/packages/cli/test/functional/test_site_convert/test_navigation_convert/expected/Home.html
+++ b/packages/cli/test/functional/test_site_convert/test_navigation_convert/expected/Home.html
@@ -54,6 +54,9 @@
           <site-nav>
             <overlay-source class="site-nav-list site-nav-list-root" tag-name="ul" to="mb-site-nav">
               <li>
+                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/404.html">404</a></div>
+              </li>
+              <li>
                 <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/Home.html">Home</a></div>
               </li>
               <li>
