--- a/packages/cli/test/functional/test_site/expected/testPanelsClosingTransition.html
+++ b/packages/cli/test/functional/test_site/expected/testPanelsClosingTransition.html
@@ -207,7 +207,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <p><strong>Nested Panel with height above 300px</strong></p>
+        <p><strong>Nested Panel with height greater than viewport</strong></p>
         <panel type="info"><template #header>
             <p>Expandable panel without closing transition</p>
           </template>
@@ -222,13 +222,13 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </panel>
-        <p><strong>Nested Panel with height below 300px</strong></p>
+        <p><strong>Nested Panel with height smaller than viewport</strong></p>
         <panel type="info"><template #header>
-            <p>Expanded panel with closing transition</p>
+            <p>Expanded panel without transition</p>
           </template>
           Some text some text some text some text some text some text some text. Some text some text some text some text some text some text some text. Some text some text some text some text some text some text some text some text some text some text some text some text some text some text. Some text some text some text some text some text some text. Some text some text some text some text some text some text some text.
         </panel>
-        <p><strong>Minimal Panel with height above 300px</strong></p>
+        <p><strong>Minimal Panel with height greater than viewport</strong></p>
         <panel type="minimal"><template #header>
             <p><em><strong>Minimal panel without closing transition <strong>-&gt;</strong></strong></em></p>
           </template><template #_alt>
@@ -246,9 +246,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </panel>
-        <p><strong>Minimal Panel with height below 300px</strong></p>
+        <p><strong>Minimal Panel with height smaller than viewport</strong></p>
         <panel type="minimal"><template #header>
-            <p><em><strong>Minimal panel with closing <strong>-&gt;</strong></strong></em></p>
+            <p><em><strong>Minimal panel without closing transition <strong>-&gt;</strong></strong></em></p>
           </template><template #_alt>
             <p>Minimal panel 2</p>
           </template>
