--- a/packages/cli/test/functional/test_site_algolia_plugin/expected/index.html
+++ b/packages/cli/test/functional/test_site_algolia_plugin/expected/index.html
@@ -19,7 +19,7 @@
   <script src="markbind/js/markbind.min.js"></script>
   <script src="index.page-vue-render.js"></script>
   <script src="markbind/js/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3.0.0-alpha.42/dist/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3.2.0/dist/style.css">
   <link rel="stylesheet" href="/test_site_algolia_plugin/plugins/markbind-plugin-anchors/markbind-plugin-anchors.css">
   <link rel="stylesheet" href="/test_site_algolia_plugin/plugins/markbind-plugin-tree/markbind-plugin-tree.css">
 </head>
@@ -123,7 +123,7 @@
 <script>
   MarkBind.setupWithSearch()
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3.0.0-alpha.42/dist/umd/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3.2.0/dist/umd/index.js"></script>
 <script>
     docsearch({
       container: "#algolia-search-input",
@@ -135,7 +135,7 @@
   </script>
 <script>
     const style = document.createElement('style');
-    style.innerHTML = ".DocSearch-Container { z-index: 1002; }";
+    style.innerHTML = ".DocSearch-Container { z-index: 1002; position: fixed; }";
     document.getElementsByTagName('head')[0].appendChild(style);
   </script>
 
