--- a/packages/cli/test/functional/test_site/expected/testCenterText.html
+++ b/packages/cli/test/functional/test_site/expected/testCenterText.html
@@ -244,5 +244,9 @@
     
       gtag('config', 'TRACKING-ID');
     </script>
+<script type="module">
+import mermaid from 'https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs';
+mermaid.initialize({"startOnLoad":true,"theme":"forest"});
+</script>
 
 </html>
