--- a/packages/cli/test/functional/test_site/expected/testMath.html
+++ b/packages/cli/test/functional/test_site/expected/testMath.html
@@ -510,5 +510,9 @@ M834 80h400000v40h-400000z" />
     
       gtag('config', 'TRACKING-ID');
     </script>
+<script type="module">
+import mermaid from 'https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs';
+mermaid.initialize({"startOnLoad":true,"theme":"forest"});
+</script>
 
 </html>
