Add warning for alt attribute of panel elements

--- a/packages/cli/test/functional/test_site/expected/testPanels.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels.html
@@ -240,6 +240,17 @@
           Lorem ipsum...
         </panel>
         <br>
+        <panel>
+          <template #alt><span>Alternative header</span></template>
+          Lorem ipsum...
+        </panel>
+        <br>
+        <panel>
+          <template #header><span>Correct header</span></template>
+          <template #alt><span>Alternative header</span></template>
+          Lorem ipsum...
+        </panel>
+        <br>
         <i class="fa fa-arrow-circle-up fa-lg d-print-none" id="scroll-top-button" onclick="handleScrollTop()" aria-hidden="true"></i>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
