--- a/packages/cli/test/functional/test_site/expected/sub_site/nested_sub_site/testNunjucksPathResolving.html
+++ b/packages/cli/test/functional/test_site/expected/sub_site/nested_sub_site/testNunjucksPathResolving.html
@@ -212,16 +212,10 @@
           By design, nunjucks' relative paths resolve from the configured template root directory.</p>
         <p>Hence, in MarkBind, these paths should also follow this behaviour.
           The root directory in this case is the respective root directory of the root site or sub sites.</p>
-        <frontmatter>
-
-          **Test {% include %}**
-
-          This is content from `testNunjucksPathResolvingInclude.md` located at `sub_site/nested_sub_site`
-
-
-
-
-        </frontmatter>
+        <hr>
+        <p><strong>Test {% include %}</strong></p>
+        <p>This is content from <code class="line-numbers hljs inline no-lang" v-pre>testNunjucksPathResolvingInclude.md</code> located at <code class="line-numbers hljs inline no-lang" v-pre>sub_site/nested_sub_site</code></p>
+        <hr>
         <p><strong>Test {% import %}</strong></p>
         <p>variable to import</p>
         <hr>
