--- a/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic1.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic1.html
@@ -90,7 +90,7 @@
         <br>
         <h1 id="topic-1"><span id="topic-1" class="anchor"></span>Topic 1<a class="fa fa-anchor" href="#topic-1" onclick="event.stopPropagation()"></a></h1>
         <blockquote>
-          <p>More content to be added.</p>
+          <p>This is a placeholder page - more content to be added.</p>
         </blockquote>
         <i class="fa fa-arrow-circle-up fa-lg d-print-none" id="scroll-top-button" onclick="handleScrollTop()" aria-hidden="true"></i>
       </div>
