Replace dummy span in panel with scroll-margin-top

--- a/packages/cli/test/functional/test_site/expected/testPageNavPrint.html
+++ b/packages/cli/test/functional/test_site/expected/testPageNavPrint.html
@@ -59,7 +59,7 @@
         <div class="site-nav-top">
           <div class="fw-bold mb-2" style="font-size: 1.25rem;">
             <div>
-              <h2 id="default-layout"><span id="default-layout" class="anchor"></span>Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
+              <h2 id="default-layout">Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/test_site/bugs/index.html">Open Bugs 🐛</a></div>
                 </li>
                 <li class="site-nav-custom-list-item site-nav-list-item-0">
-                  <h3 id="testing-site-nav"><span id="testing-site-nav" class="anchor"></span>Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
+                  <h3 id="testing-site-nav">Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
                 </li>
                 <li>
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><strong>Dropdown </strong> <span aria-hidden="true" class="glyphicon glyphicon-search"></span> title ✏️
@@ -210,9 +210,9 @@
       <div id="content-wrapper">
 
         <div class="page-nav-print d-none d-print-block" v-pre></div>
-        <h1 id="h1"><span id="h1" class="anchor"></span>H1<a class="fa fa-anchor" href="#h1" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="h1">H1<a class="fa fa-anchor" href="#h1" onclick="event.stopPropagation()"></a></h1>
         <p>Some content</p>
-        <h2 id="h2"><span id="h2" class="anchor"></span>H2<a class="fa fa-anchor" href="#h2" onclick="event.stopPropagation()"></a></h2>
+        <h2 id="h2">H2<a class="fa fa-anchor" href="#h2" onclick="event.stopPropagation()"></a></h2>
         <p>Some more content</p>
         <div class="page-nav-print d-none d-print-block" v-pre>
           This is another printed pageNav
@@ -234,7 +234,7 @@
     </div>
     <div>
       <footer>
-        <h1 id="heading-in-footer-should-not-be-indexed"><span id="heading-in-footer-should-not-be-indexed" class="anchor"></span>Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="heading-in-footer-should-not-be-indexed">Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
         <div class="text-center">
           This is a dynamic height footer that supports markdown <span>😄</span>!
         </div>
