--- a/packages/cli/test/functional/test_site/expected/testImages.html
+++ b/packages/cli/test/functional/test_site/expected/testImages.html
@@ -59,7 +59,7 @@
         <div class="site-nav-top">
           <div class="fw-bold mb-2" style="font-size: 1.25rem;">
             <div>
-              <h2 id="default-layout"><span id="default-layout" class="anchor"></span>Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
+              <h2 id="default-layout">Default Layout<a class="fa fa-anchor" href="#default-layout" onclick="event.stopPropagation()"></a></h2>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/test_site/bugs/index.html">Open Bugs 🐛</a></div>
                 </li>
                 <li class="site-nav-custom-list-item site-nav-list-item-0">
-                  <h3 id="testing-site-nav"><span id="testing-site-nav" class="anchor"></span>Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
+                  <h3 id="testing-site-nav">Testing Site-Nav<a class="fa fa-anchor" href="#testing-site-nav" onclick="event.stopPropagation()"></a></h3>
                 </li>
                 <li>
                   <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><strong>Dropdown </strong> <span aria-hidden="true" class="glyphicon glyphicon-search"></span> title ✏️
@@ -208,13 +208,13 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <h1 id="images"><span id="images" class="anchor"></span>Images<a class="fa fa-anchor" href="#images" onclick="event.stopPropagation()"></a></h1>
-        <h2 id="alt"><span id="alt" class="anchor"></span>Alt<a class="fa fa-anchor" href="#alt" onclick="event.stopPropagation()"></a></h2>
+        <h1 id="images">Images<a class="fa fa-anchor" href="#images" onclick="event.stopPropagation()"></a></h1>
+        <h2 id="alt">Alt<a class="fa fa-anchor" href="#alt" onclick="event.stopPropagation()"></a></h2>
         <p>The label of the image will be used as the &quot;alt&quot;: <a href="https://markbind.org/images/logo-lightbackground.png" target="_self"><img src="https://markbind.org/images/logo-lightbackground.png" alt="caption" class="img-fluid"></a></p>
-        <h2 id="dimension"><span id="dimension" class="anchor"></span>Dimension<a class="fa fa-anchor" href="#dimension" onclick="event.stopPropagation()"></a></h2>
+        <h2 id="dimension">Dimension<a class="fa fa-anchor" href="#dimension" onclick="event.stopPropagation()"></a></h2>
         <p>This image has a width of 100px: <a href="https://markbind.org/images/logo-lightbackground.png" target="_self"><img src="https://markbind.org/images/logo-lightbackground.png" alt class="img-fluid" width="100"></a></p>
         <p>This image has a width of 200px: <a href="https://markbind.org/images/logo-lightbackground.png" target="_self"><img src="https://markbind.org/images/logo-lightbackground.png" alt class="img-fluid" width="200"></a></p>
-        <h2 id="linkify"><span id="linkify" class="anchor"></span>Linkify<a class="fa fa-anchor" href="#linkify" onclick="event.stopPropagation()"></a></h2>
+        <h2 id="linkify">Linkify<a class="fa fa-anchor" href="#linkify" onclick="event.stopPropagation()"></a></h2>
         <p>AutoWrap image with link to the image URL:</p>
         <p><a href="https://octodex.github.com/images/minion.png" target="_self"><img src="https://octodex.github.com/images/minion.png" alt="Minion" class="img-fluid"></a></p>
         <p>Does not autoWrap image with link to the image URL if already wrapped with a link:</p>
@@ -228,7 +228,7 @@
     </div>
     <div>
       <footer>
-        <h1 id="heading-in-footer-should-not-be-indexed"><span id="heading-in-footer-should-not-be-indexed" class="anchor"></span>Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="heading-in-footer-should-not-be-indexed">Heading in footer should not be indexed<a class="fa fa-anchor" href="#heading-in-footer-should-not-be-indexed" onclick="event.stopPropagation()"></a></h1>
         <div class="text-center">
           This is a dynamic height footer that supports markdown <span>😄</span>!
         </div>
