--- a/packages/cli/test/functional/test_site/expected/testPageNavPrint.html
+++ b/packages/cli/test/functional/test_site/expected/testPageNavPrint.html
@@ -282,10 +282,11 @@
                 } else {
                     alert('Error submitting form! Please try again later.');
                 }
-                submitButton.innerText = submitButtonText;
             })
             .catch(error => {
                 alert('Error submitting form! Please try again later.');
+            })
+            .finally(() => {
                 submitButton.innerText = submitButtonText;
             })
         }
