Update test cases

--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -370,9 +370,11 @@
               resolved or clarified as necessary.</p>
           </div>
           <p><strong>Include segment</strong></p>
-          <div>Requirements gathering, requirements elicitation, requirements analysis,
-            requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
-            of understanding what a software product should do.</div>
+          <div>
+            <p>Requirements gathering, requirements elicitation, requirements analysis,
+              requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
+              of understanding what a software product should do.</p>
+          </div>
           <p><strong>Boilerplate include</strong></p>
           <div name="Boilerplate Referencing">
             <panel src="/test_site/requirements/UserStories._include_.html" no-close><template #header>
@@ -490,27 +492,33 @@
             </div>
           </box>
           <p><strong>Include a file using baseUrl</strong></p>
-          <div>As we establish requirements, they should be recorded in some way for future reference,
-            usually called a requirement specification. Furthermore, it is advisable to show these requirements to stakeholders,
-            and refine requirements based on their feedback. The next phase is to convert requirements into a product
-            specification that specifies how the product will address the requirements. </div>
+          <div>
+            <p>As we establish requirements, they should be recorded in some way for future reference,
+              usually called a requirement specification. Furthermore, it is advisable to show these requirements to stakeholders,
+              and refine requirements based on their feedback. The next phase is to convert requirements into a product
+              specification that specifies how the product will address the requirements.</p>
+          </div>
           <panel src="/test_site/requirements/SpecifyingRequirements._include_.html#preview" type="minimal" fragment="preview"><template #header>
               <p><strong>same test with panels</strong></p>
             </template></panel>
           <p><strong>Include a file in a sub-folder that uses baseUrl</strong></p>
           <div>
-            <div>Requirements gathering, requirements elicitation, requirements analysis,
-              requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
-              of understanding what a software product should do.</div>
+            <div>
+              <p>Requirements gathering, requirements elicitation, requirements analysis,
+                requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
+                of understanding what a software product should do.</p>
+            </div>
           </div>
           <panel src="/test_site/requirements/testBaseUrlInIncludeSrc._include_.html" type="minimal"><template #header>
               <p><strong>same test with panels</strong></p>
             </template></panel>
           <p><strong>Include a file in a sub-folder that uses baseUrl using baseUrl</strong></p>
           <div>
-            <div>Requirements gathering, requirements elicitation, requirements analysis,
-              requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
-              of understanding what a software product should do.</div>
+            <div>
+              <p>Requirements gathering, requirements elicitation, requirements analysis,
+                requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
+                of understanding what a software product should do.</p>
+            </div>
           </div>
           <panel src="/test_site/requirements/testBaseUrlInIncludeSrc._include_.html" type="minimal"><template #header>
               <p><strong>same test with panels</strong></p>
@@ -805,8 +813,7 @@
             <a class="nav-link py-1" href="#panel-without-heading-with-keyword" v-pre>Panel without heading with keyword&#x200E;</a>
             <a class="nav-link py-1" href="#keyword-should-be-tagged-to-this-heading-not-the-panel-heading" v-pre>Keyword should be tagged to this heading, not the panel heading&#x200E;</a>
             <a class="nav-link py-1" href="#panel-with-heading-with-keyword" v-pre>Panel with heading with keyword&#x200E;</a>
-            <a class="nav-link py-1" href="#heading-fragment-with-leading-spaces-and-newline" v-pre>Heading
-              Fragment with leading spaces and newline
+            <a class="nav-link py-1" href="#heading-fragment-with-leading-spaces-and-newline" v-pre>Heading Fragment with leading spaces and newline
               &#x200E;</a>
             <a class="nav-link py-1" href="#heading-with-included-keyword" v-pre>Heading with included keyword&#x200E;</a>
             <a class="nav-link py-1" href="#included-heading" v-pre>Included Heading&#x200E;</a>
