--- a/packages/cli/test/functional/test_site/expected/requirements/testBaseUrlInIncludeSrc._include_.html
+++ b/packages/cli/test/functional/test_site/expected/requirements/testBaseUrlInIncludeSrc._include_.html
@@ -1,3 +1,5 @@
-<div>Requirements gathering, requirements elicitation, requirements analysis,
-  requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
-  of understanding what a software product should do.</div>
+<div>
+  <p>Requirements gathering, requirements elicitation, requirements analysis,
+    requirements capture are some of the terms commonly <strong>and</strong> interchangeably used to represent the activity
+    of understanding what a software product should do.</p>
+</div>
