Update test cases

--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -458,8 +458,7 @@
               <pic src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png"></pic>
             </div>
           </div>
-          <div>
-            <img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png">
+          <div> <img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png">
             <pic src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png"></pic>
           </div>
           <p><strong>Include nested sub-site directly</strong></p>
@@ -525,18 +524,14 @@
             </template></panel>
           <p><strong>Include a file in a sub-site that uses baseUrl</strong></p>
           <div>
-            <div>
-              <img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png">
-            </div>
+            <div><img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png"></div>
           </div>
           <panel src="/test_site/sub_site/testBaseUrlInIncludeSrcSubSite._include_.html" type="minimal"><template #header>
               <p><strong>same test with panels</strong></p>
             </template></panel>
           <p><strong>Include a file in a sub-site that uses baseUrl using baseUrl</strong></p>
           <div>
-            <div>
-              <img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png">
-            </div>
+            <div><img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png"></div>
           </div>
           <panel src="/test_site/sub_site/testBaseUrlInIncludeSrcSubSite._include_.html" type="minimal"><template #header>
               <p><strong>same test with panels</strong></p>
