--- a/packages/cli/test/functional/test_site_templates/test_default/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/index.html
@@ -90,7 +90,7 @@
         <br>
         <div class="bg-primary text-white py-5 mb-4">
           <div class="container">
-            <h1 class="display-4 no-index" id="great-you-just-initialized-a-markbind-site"><span id="great-you-just-initialized-a-markbind-site" class="anchor"></span>Great!<br>You just initialized a MarkBind site.<a class="fa fa-anchor" href="#great-you-just-initialized-a-markbind-site" onclick="event.stopPropagation()"></a></h1>
+            <h1 class="display-4 no-index" id="great-you-ve-just-initialized-a-markbind-site"><span id="great-you-ve-just-initialized-a-markbind-site" class="anchor"></span>Great!<br>You've just initialized a MarkBind site.<a class="fa fa-anchor" href="#great-you-ve-just-initialized-a-markbind-site" onclick="event.stopPropagation()"></a></h1>
             <p class="lead">Let's get started...</p>
           </div>
         </div>
