--- a/packages/cli/test/functional/test_site_convert/test_navigation_convert/expected/test_folder/extra_1.html
+++ b/packages/cli/test/functional/test_site_convert/test_navigation_convert/expected/test_folder/extra_1.html
@@ -93,7 +93,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <h1 id="sample-content-in-another-folder-which-is-not-named-content"><span id="sample-content-in-another-folder-which-is-not-named-content" class="anchor"></span>Sample content in another folder which is not named content<a class="fa fa-anchor" href="#sample-content-in-another-folder-which-is-not-named-content" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="sample-content-in-another-folder-which-is-not-named-content">Sample content in another folder which is not named content<a class="fa fa-anchor" href="#sample-content-in-another-folder-which-is-not-named-content" onclick="event.stopPropagation()"></a></h1>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
         <div class="nav-component slim-scroll">
