--- a/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic3b.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic3b.html
@@ -88,7 +88,7 @@
       <div id="content-wrapper">
 
         <br>
-        <h1 id="topic-3b"><span id="topic-3b" class="anchor"></span>Topic 3b<a class="fa fa-anchor" href="#topic-3b" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="topic-3b">Topic 3b<a class="fa fa-anchor" href="#topic-3b" onclick="event.stopPropagation()"></a></h1>
         <blockquote>
           <p>This is a placeholder page - more content to be added.</p>
         </blockquote>
