--- a/packages/cli/test/functional/test_site_convert/test_basic_convert/expected/Page-1.html
+++ b/packages/cli/test/functional/test_site_convert/test_basic_convert/expected/Page-1.html
@@ -59,7 +59,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
-        <h1 id="page-1"><span id="page-1" class="anchor"></span>Page 1<a class="fa fa-anchor" href="#page-1" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="page-1">Page 1<a class="fa fa-anchor" href="#page-1" onclick="event.stopPropagation()"></a></h1>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
         <div class="nav-component slim-scroll">
