--- a/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic2.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic2.html
@@ -88,7 +88,7 @@
       <div id="content-wrapper">
 
         <br>
-        <h1 id="topic-2"><span id="topic-2" class="anchor"></span>Topic 2<a class="fa fa-anchor" href="#topic-2" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="topic-2">Topic 2<a class="fa fa-anchor" href="#topic-2" onclick="event.stopPropagation()"></a></h1>
         <blockquote>
           <p>This is a placeholder page - more content to be added.</p>
         </blockquote>
