--- a/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic3a.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic3a.html
@@ -88,7 +88,7 @@
       <div id="content-wrapper">
 
         <br>
-        <h1 id="topic-3a"><span id="topic-3a" class="anchor"></span>Topic 3a<a class="fa fa-anchor" href="#topic-3a" onclick="event.stopPropagation()"></a></h1>
+        <h1 id="topic-3a">Topic 3a<a class="fa fa-anchor" href="#topic-3a" onclick="event.stopPropagation()"></a></h1>
         <blockquote>
           <p>This is a placeholder page - more content to be added.</p>
         </blockquote>
