Update test cases

--- a/packages/cli/test/functional/test_site/expected/testWeb3FormPlugin.html
+++ b/packages/cli/test/functional/test_site/expected/testWeb3FormPlugin.html
@@ -210,7 +210,7 @@
       <div id="content-wrapper">
         <p><strong>Default contact us form</strong></p>
         <box type="info" no-icon>
-          <h2 id="contact-us"><span id="contact-us" class="anchor"></span>Contact Us<a class="fa fa-anchor" href="#contact-us" onclick="event.stopPropagation()"></a></h2>
+          <p class="h2">Contact Us</p>
           <form onsubmit="submitForm(this)"><input type="hidden" name="access_key" value><label for="name">Name</label>
             <input type="text" name="name" required placeholder="John Doe">
             <label for="email">Email</label>
