Change css selectors to be more specific

--- a/packages/cli/test/functional/test_site/expected/testWeb3FormPlugin.html
+++ b/packages/cli/test/functional/test_site/expected/testWeb3FormPlugin.html
@@ -209,7 +209,7 @@
       </overlay-source>
       <div id="content-wrapper">
         <p><strong>Default contact us form</strong></p>
-        <box type="info" no-icon>
+        <box class="web3Form" type="info" no-icon>
           <p class="h2">Contact Us</p>
           <form onsubmit="submitForm(this)"><input type="hidden" name="access_key" value><label for="name">Name</label>
             <input type="text" name="name" required placeholder="John Doe">
@@ -221,7 +221,7 @@
           </form>
         </box>
         <p><strong>Form with default inputs</strong></p>
-        <box type="info" no-icon>
+        <box class="web3Form" type="info" no-icon>
 
 
 
@@ -231,7 +231,7 @@
           </form>
         </box>
         <p><strong>Form with customised inputs</strong></p>
-        <box type="info" no-icon>
+        <box class="web3Form" type="info" no-icon>
 
 
 
@@ -252,7 +252,7 @@
             </datalist><br><button type="submit" class="badge bg-info">Submit</button></form>
         </box>
         <p><strong>Form with customised options</strong></p>
-        <box type="warning" no-icon>
+        <box type="warning" class="web3Form" no-icon>
           <h3 id="i-am-a-header"><span id="i-am-a-header" class="anchor"></span>🚀 I am a header<a class="fa fa-anchor" href="#i-am-a-header" onclick="event.stopPropagation()"></a></h3>
           <form onsubmit="submitForm(this)"><input type="hidden" name="access_key" value><label for="name">Name</label>
             <input type="text" name="name" required placeholder="John Doe">
