Add breadcrumb to test site

--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
 
         <div class="website-content">
           <p><strong>Test <code class="line-numbers hljs inline no-lang" v-pre>&lt;markdown&gt;</code> and <code class="line-numbers hljs inline no-lang" v-pre>&lt;md&gt;</code> elements</strong></p>
