--- a/packages/cli/test/functional/test_site/expected/testAnnotate.html
+++ b/packages/cli/test/functional/test_site/expected/testAnnotate.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Annotate with saved Image</strong></p>
         <annotate src="./images/annotateSampleImage.png" width="500" alt="sampleImage">
           <a-point x="25%" y="25%" content="Lorem ipsum dolor sit amet"></a-point>
