--- a/packages/cli/test/functional/test_site/expected/testCodeBlocks.html
+++ b/packages/cli/test/functional/test_site/expected/testCodeBlocks.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Test: Code blocks</strong></p>
         <p><strong>Normal fenced code should render correctly</strong></p>
         <pre><code class="line-numbers hljs" v-pre><span>Content in a fenced code block
