--- a/packages/cli/test/functional/test_site/expected/testHr.html
+++ b/packages/cli/test/functional/test_site/expected/testHr.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <h1 id="different-types-of-horizontal-rules"><span id="different-types-of-horizontal-rules" class="anchor"></span>Different types of horizontal rules<a class="fa fa-anchor" href="#different-types-of-horizontal-rules" onclick="event.stopPropagation()"></a></h1>
         <hr>
         <hr class="dotted">
