--- a/packages/cli/test/functional/test_site/expected/testIncludeBoilerplate.html
+++ b/packages/cli/test/functional/test_site/expected/testIncludeBoilerplate.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p>In the CODE section, it should render exactly the content of the variable &quot;code&quot;. In the OUTPUT section, it should render
           the footnotes correctly.</p>
         <div>
