--- a/packages/cli/test/functional/test_site/expected/testIncludeMultipleModals.html
+++ b/packages/cli/test/functional/test_site/expected/testIncludeMultipleModals.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>For modals with non-unique id, only the first modal will be shown</strong></p>
         <div>
           <modal large id="modal:bugRepro"><template #header>Establishing Requirements</template>
