--- a/packages/cli/test/functional/test_site/expected/testIncludePluginsRendered.html
+++ b/packages/cli/test/functional/test_site/expected/testIncludePluginsRendered.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p>The contents of these two panels should be exactly the same.</p>
         <panel src="/test_site/needsrenderedplugin._include_.html"></panel>
         <panel>
