--- a/packages/cli/test/functional/test_site/expected/testLinks.html
+++ b/packages/cli/test/functional/test_site/expected/testLinks.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <h1 id="autolinks"><span id="autolinks" class="anchor"></span>Autolinks<a class="fa fa-anchor" href="#autolinks" onclick="event.stopPropagation()"></a></h1>
         <p>A URL with <code class="line-numbers hljs inline no-lang" v-pre>http(s)://</code> head or an email address in plain text will be auto converted into clickable links.</p>
         <p>This functionality is inherited from markdown-it, with the setting of <code class="line-numbers hljs inline no-lang" v-pre>fuzzyLink</code> turned off.</p>
