--- a/packages/cli/test/functional/test_site/expected/testMath.html
+++ b/packages/cli/test/functional/test_site/expected/testMath.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <h1 id="math-formulae"><span id="math-formulae" class="anchor"></span>Math Formulae<a class="fa fa-anchor" href="#math-formulae" onclick="event.stopPropagation()"></a></h1>
         <h2 id="markbind-supports-typesetting-tex-math-equations"><span id="markbind-supports-typesetting-tex-math-equations" class="anchor"></span>Markbind supports typesetting TeX math equations<a class="fa fa-anchor" href="#markbind-supports-typesetting-tex-math-equations" onclick="event.stopPropagation()"></a></h2>
         <p>Solve the following simultaneous equations:</p>
