--- a/packages/cli/test/functional/test_site/expected/testModals.html
+++ b/packages/cli/test/functional/test_site/expected/testModals.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Modal with attributes</strong></p>
         <p>This is a <trigger for="modal:loremipsum" trigger="hover">hover trigger</trigger> for a modal.</p>
         <modal id="modal:loremipsum"><template #header><strong>Modal header</strong> 🚀</template>
