--- a/packages/cli/test/functional/test_site/expected/testPageNavPrint.html
+++ b/packages/cli/test/functional/test_site/expected/testPageNavPrint.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
 
         <div class="page-nav-print d-none d-print-block" v-pre></div>
         <h1 id="h1"><span id="h1" class="anchor"></span>H1<a class="fa fa-anchor" href="#h1" onclick="event.stopPropagation()"></a></h1>
