--- a/packages/cli/test/functional/test_site/expected/testPageNavWithoutTitleAndNavHeadings.html
+++ b/packages/cli/test/functional/test_site/expected/testPageNavWithoutTitleAndNavHeadings.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
 
         <p>There should not be any contents in the page nav component/section of the page.</p>
         <p>Hence, the separator i.e., <code class="line-numbers hljs inline no-lang" v-pre>border-left: ...</code> should not be present in the above mentioned component.</p>
