--- a/packages/cli/test/functional/test_site/expected/testPanelMarkdownParsing.html
+++ b/packages/cli/test/functional/test_site/expected/testPanelMarkdownParsing.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p>markdown pre text <strong>immediately</strong> prepending a component, without an empty line after</p>
         <panel>
           line 1 which behaves as per normal ( empty line still counts )
