--- a/packages/cli/test/functional/test_site/expected/testPanels.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Panel with attributes</strong></p>
         <panel><template #header>
             <p>Correct header</p>
