--- a/packages/cli/test/functional/test_site/expected/testPlantUML.html
+++ b/packages/cli/test/functional/test_site/expected/testPlantUML.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>PlantUML Test</strong></p>
         <pic src="/test_site/inline-output.png"></pic>
         <pic src="/test_site/9c9e77fc0a983cb6b592e65733787bec.png"></pic>
