--- a/packages/cli/test/functional/test_site/expected/testPopoverTrigger.html
+++ b/packages/cli/test/functional/test_site/expected/testPopoverTrigger.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Popover initiated by trigger should honor trigger attribute</strong></p>
         <popover id="pop:xp-user-stories" trigger="click">
           popover
