--- a/packages/cli/test/functional/test_site/expected/testDates.html
+++ b/packages/cli/test/functional/test_site/expected/testDates.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <h2 id="dates"><span id="dates" class="anchor"></span>Dates<a class="fa fa-anchor" href="#dates" onclick="event.stopPropagation()"></a></h2>
         <p>Mon 12 Aug should be Mon 12 Aug</p>
         <p>12 08 2019 should be 12 08 2019</p>
