--- a/packages/cli/test/functional/test_site/expected/testEmptyFrontmatter.html
+++ b/packages/cli/test/functional/test_site/expected/testEmptyFrontmatter.html
@@ -215,6 +215,7 @@
           </div>
         </overlay-source>
         <div id="content-wrapper">
+          <breadcrumb></breadcrumb>
 
           <p>A page with an empty frontmatter should still build.</p>
         </div>
