--- a/packages/cli/test/functional/test_site/expected/testExternalScripts.html
+++ b/packages/cli/test/functional/test_site/expected/testExternalScripts.html
@@ -215,6 +215,7 @@
           </div>
         </overlay-source>
         <div id="content-wrapper">
+          <breadcrumb></breadcrumb>
           <p>The external script <a href="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">MathJax 2.75</a> should be included, and the following MathJax content should render:</p>
           <box>
             When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
