--- a/packages/cli/test/functional/test_site/expected/testPageNavTarget.html
+++ b/packages/cli/test/functional/test_site/expected/testPageNavTarget.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
 
         <p>The Bootstrap scrollspy related classes (i.e data-bs-target, data-bs-spy, data-bs-offset) should not be applie to the body element in the generated HTML
           as there are no navigable headings in the page.</p>
