--- a/packages/cli/test/functional/test_site/expected/testPageNavWithOnlyTitle.html
+++ b/packages/cli/test/functional/test_site/expected/testPageNavWithOnlyTitle.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
 
         <p>Since a page nav title has been added to <code class="line-numbers hljs inline no-lang" v-pre>frontmatter</code>, it should show in page nav component/section of the page.</p>
         <p>Hence, the separator i.e., <code class="line-numbers hljs inline no-lang" v-pre>border-left: ...</code> should now be present in the above mentioned component.</p>
