--- a/packages/cli/test/functional/test_site/expected/testPanelsClosingTransition.html
+++ b/packages/cli/test/functional/test_site/expected/testPanelsClosingTransition.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Nested Panel with height greater than viewport</strong></p>
         <panel type="info"><template #header>
             <p>Expandable panel without closing transition</p>
