--- a/packages/cli/test/functional/test_site/expected/testPopovers.html
+++ b/packages/cli/test/functional/test_site/expected/testPopovers.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Popover with attributes</strong></p>
         <popover><template #content>Correct content</template><template #header>Correct header</template>
           Hover popover
