--- a/packages/cli/test/functional/test_site/expected/testWeb3FormPlugin.html
+++ b/packages/cli/test/functional/test_site/expected/testWeb3FormPlugin.html
@@ -208,6 +208,7 @@
         </div>
       </overlay-source>
       <div id="content-wrapper">
+        <breadcrumb></breadcrumb>
         <p><strong>Default contact us form</strong></p>
         <box class="web3Form" type="info" no-icon>
           <p class="h2">Contact Us</p>
